--- a/A4_Portrait.jrxml
+++ b/A4_Portrait.jrxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2015-12-15T16:24:17 -->
+<!-- 2015-12-15T16:45:36 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Baselland_A4_Portrait" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5fb2edee-19b3-488e-bb13-1a3c485efd5f">
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
 	<parameter name="title" class="java.lang.String"/>
 	<parameter name="subtitle" class="java.lang.String"/>
 	<field name="table" class="net.sf.jasperreports.engine.data.JRMapCollectionDataSource"/>
 	<field name="mapSubReport" class="java.lang.String"/>
-	<pageHeader>
-		<band height="75">
-			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+	<title>
+		<band height="58">
 			<textField>
 				<reportElement stretchType="RelativeToTallestObject" x="0" y="20" width="555" height="38" uuid="be1c2711-dc38-4407-84a6-af5b22ecae1b"/>
 				<textElement>
@@ -25,7 +24,7 @@
 				<textFieldExpression><![CDATA[$P{title}]]></textFieldExpression>
 			</textField>
 		</band>
-	</pageHeader>
+	</title>
 	<detail>
 		<band height="601" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
