--- a/A4_Portrait.jrxml
+++ b/A4_Portrait.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2015-12-17T11:27:50 -->
+<!-- 2015-12-17T13:20:43 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Baselland_A4_Portrait" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5fb2edee-19b3-488e-bb13-1a3c485efd5f">
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
 	<parameter name="title" class="java.lang.String"/>
@@ -44,9 +44,10 @@
 	<pageFooter>
 		<band height="131">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-			<image scaleImage="RealSize" hAlign="Center" vAlign="Middle">
-				<reportElement x="20" y="20" width="50" height="50" uuid="63273d5a-46be-4bab-bad7-46998ac21dce"/>
-				<imageExpression><![CDATA[new URL($P{legendURL})]]></imageExpression>
+			<printWhenExpression><![CDATA[!$P{legendURL}.equals("")]]></printWhenExpression>
+			<image scaleImage="RealSize" hAlign="Left" vAlign="Top">
+				<reportElement x="10" y="10" width="535" height="121" uuid="63273d5a-46be-4bab-bad7-46998ac21dce"/>
+				<imageExpression><![CDATA[$P{legendURL}]]></imageExpression>
 			</image>
 		</band>
 	</pageFooter>
