--- a/A4_Portrait.jrxml
+++ b/A4_Portrait.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.0.final using JasperReports Library version 6.2.0  -->
-<!-- 2015-12-17T13:20:43 -->
+<!-- 2015-12-18T14:13:59 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Baselland_A4_Portrait" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5fb2edee-19b3-488e-bb13-1a3c485efd5f">
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
 	<parameter name="title" class="java.lang.String"/>
@@ -9,7 +9,7 @@
 	<field name="table" class="net.sf.jasperreports.engine.data.JRMapCollectionDataSource"/>
 	<field name="mapSubReport" class="java.lang.String"/>
 	<pageHeader>
-		<band height="55">
+		<band height="70">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<textField>
 				<reportElement x="0" y="0" width="555" height="30" uuid="22a6cfd9-b19e-4849-8c6b-6b3fe9e3faa9"/>
@@ -18,8 +18,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$P{title}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="30" width="555" height="22" uuid="be1c2711-dc38-4407-84a6-af5b22ecae1b"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="30" width="555" height="40" uuid="be1c2711-dc38-4407-84a6-af5b22ecae1b"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -28,10 +28,10 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="610" splitType="Stretch">
+		<band height="600" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<subreport>
-				<reportElement mode="Transparent" x="0" y="0" width="555" height="600" backcolor="#FFFFFF" uuid="c889b337-f931-43d3-b6b5-07e9adb33106">
+				<reportElement mode="Transparent" x="0" y="10" width="555" height="590" backcolor="#FFFFFF" uuid="c889b337-f931-43d3-b6b5-07e9adb33106">
 					<property name="local_mesure_unitwidth" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
 					<property name="local_mesure_unitheight" value="pixel"/>
